--- a/Copy & Paste Guides.sketchplugin/Contents/Sketch/manifest.json
+++ b/Copy & Paste Guides.sketchplugin/Contents/Sketch/manifest.json
@@ -48,7 +48,7 @@
       ]
    },
    "compatibleVersion":"3.4.2",
-   "identifier":"",
+   "identifier":"nl.pixelpillow.copypasteguides",
    "version":"0.8.0",
    "description":"Copy & Paste Guides",
    "homepage":"https:\/\/pixelpillow.nl",
